; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_jail.c_prison_hold_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_jail.c_prison_hold_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.prison = type { i64, i32, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Trying to hold dead prison %p (jid=%d).\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prison_hold_locked(%struct.prison* %0) #0 {
  %2 = alloca %struct.prison*, align 8
  store %struct.prison* %0, %struct.prison** %2, align 8
  %3 = load %struct.prison*, %struct.prison** %2, align 8
  %4 = getelementptr inbounds %struct.prison, %struct.prison* %3, i32 0, i32 2
  %5 = load i32, i32* @MA_OWNED, align 4
  %6 = call i32 @mtx_assert(i32* %4, i32 %5)
  %7 = load %struct.prison*, %struct.prison** %2, align 8
  %8 = getelementptr inbounds %struct.prison, %struct.prison* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sgt i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = load %struct.prison*, %struct.prison** %2, align 8
  %13 = load %struct.prison*, %struct.prison** %2, align 8
  %14 = getelementptr inbounds %struct.prison, %struct.prison* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 @KASSERT(i32 %11, i8* %17)
  %19 = load %struct.prison*, %struct.prison** %2, align 8
  %20 = getelementptr inbounds %struct.prison, %struct.prison* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* %20, align 8
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
